runtime/kubernetes/040-Postgres.yaml
# Expose Postgres
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: zeta-guard
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
#      targetPort: 15432
      name: postgres

---
# Deployment for PostgreSQL
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: zeta-guard
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: postgres
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -ce
                - exec pg_isready -U "zeta-guard" -h 127.0.0.1 -p 5432 -d keycloak
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -ce
                - exec pg_isready -U "zeta-guard" -h 127.0.0.1 -p 5432 -d keycloak
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
