runtime/kubernetes/050-Keycloak.yaml
# Expose Keycloak
apiVersion: v1
kind: Service
metadata:
  name: keycloak-zeta
  namespace: zeta-guard
  labels:
    app: keycloak-zeta
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8080
  selector:
    app: keycloak-zeta
---
# Deployment for the custom Keycloak server
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-zeta
  namespace: zeta-guard
  labels:
    app: keycloak-zeta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: keycloak-zeta
  template:
    metadata:
      name: keycloak-zeta
      labels:
        app: keycloak-zeta
    spec:
      containers:
        - name: keycloak-zeta
          image: zeta/zeta-guard/keycloak-zeta:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          args: [ "start", "--optimized"]
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 90
            periodSeconds: 20
